2015-02-25  Kaz Kylheku  <kaz@kylheku.com>

	New ignerr macro.

	* eval.c (me_ignerr): New static function.
	(eval_init): Registered ignerr macro.

	* txr.1: Documented.

	* tl.vim, txr.vim: Regenerated.

2015-02-25  Kaz Kylheku  <kaz@kylheku.com>

	Introducing persistent error state on streams.

	* lib.c (cobj_ops): New function.

	* lib.h (cobj_ops): Declared.

	* stream.c (null_ops): Initializer updated.
	(struct stdio_handle): New member, err.
	(stdio_stream_mark): Mark the err member.
	(errno_to_string): New static function.
	(stdio_maybe_read_error, stdio_maybe_error): Set persistent error
	state. Use errno_to_string_function.
	(stdio_put_string, stdio_put_char, stdio_put_byte, stdio_seek,
	stdio_get_line): Set errno to zero, so that if the underlying
	operations do not set errno on err, we don't misinterpret some pervious
	errno value as pertaining to the failed stream operation.
	(stdio_get_error, stdio_get_error_str, stdio_clear_error): New static
	functions.
	(stdio_ops, tail_ops, pipe_ops): Update initializer with new functions.
	(string_in_get_error, string_in_get_error_str): New static functions.
	(string_in_ops): Update initializer with new functions.
	(byte_in_get_error, byte_in_get_error_str): New static functions.
	(byte_in_ops): Update initializer with new functions.
	(string_out_ops, strlist_out_ops): Update initializer with null
	pointers for new functions.
	(struct dir_handle): New struct type.
	(dir_destroy, dir_mark): New functions.
	(dir_get_line): Refactor for struct dir_handle context rather than DIR.
	Persist error state.
	(dir_close): Refactor for struct dir_handle.
	(dir_get_error, dir_get_error_str, dir_clear_error): New static functions.
	(dir_ops): Update initializer with new functions.
	(make_stdio_stream_common): Initialize new err member.
	(make_dir_stream): Refactor for struct dir_handle.
	(get_error, get_error_str, clear_error): New functions.
	(cat_get_error, cat_get_error_str, cat_clear_error): New static
	functions.